<resources>
    <string name="app_name">BabyBuddy</string>
    <string name="scanner_ready">Scanner Ready!</string>
    <string name="title_activity_sign_up">sign_up</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="emergency">Emergency Contacts</string>
    <string name="relation">Relationship</string>
    <string name="submit">Submit</string>
    <string name="App_Name">Baby Buddy</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="channel">Notification Channel</string>
    <string name="description">Channel for displaying Baby Buddy Timer Notifications</string>
</resources>